--- a/src/assets/components/Conhecimentos/Conhecimentos.css
+++ b/src/assets/components/Conhecimentos/Conhecimentos.css
@@ -1,4 +1,4 @@
-.projetos {
+.conhecimentos {
     margin-top: 6rem;
     margin-bottom: 6rem;
     min-height: 600px;
@@ -66,7 +66,7 @@
   }
 
   @media (max-width: 1012px) {
-    .projetos {
+    .conhecimentos {
       display: flex;
       flex-direction: column;
       align-items: center;
