--- a/src/assets/components/Navbar/Navbar.css
+++ b/src/assets/components/Navbar/Navbar.css
@@ -25,7 +25,7 @@
     font-size: 17px;
     padding: 0px 13px;
   }
-  li:hover{
+  .linkLI:hover{
     background-color: var(--detail-color);
     transition: .3s;
     border-radius: 15px;
